# MyApp

src/: CMakeLists.txt  main.cpp
src/GUI/: Window.cpp  Window.h  WindowException.h
src/ImGUI/: imgui_impl_opengl3.cpp
src/Network/: ResourceLoader.cpp  ResourceLoader.h
src/glad/include/glad/: glad.h
src/glad/src/: glad.c
